--- a/ContactMe.html
+++ b/ContactMe.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Contact Me</title>
+    <style media="screen">
+    body {
+      margin: auto;
+      width: 50%;
+       background-color: #C2DED1;
+    </style>
   </head>
   <body>
     <h1>Contact Me</h1>
