--- a/index.html
+++ b/index.html
@@ -5,6 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Personl Page</title>
+    <style media="screen">
+    img{
+      width: 150px;
+      border-radius: 50%;
+      border: solid 2px #354259;
+      margin-right: 10px;
+    }
+      body {
+        margin: auto;
+        width: 50%;
+         background-color: #C2DED1;
+      }
+      hr {
+        border-style: none;
+        border-top-style: dotted;
+        border-width: 4px;
+        width: 10%;
+        color: #CDC2AE;
+        margin-top: 5%;
+        margin-bottom: 5%;
+      }
+    </style>
 </head>
 
 <body>
@@ -12,8 +34,8 @@
         <tbody>
             <tr>
                 <td>
-                    <img src="https://dealmaker.blob.core.windows.net/images/t_aa983ae60c944aa19734660f712e0ac0/67_100504.png"
-                        alt="Cute pig with glasses" />
+                    <img src="images/Me.png"
+                        alt="Picture of myself"/>
                 </td>
                 <td>
                     <h1>Christopher Hancock</h1>
@@ -21,10 +43,8 @@
                         <em>Learning <strong>software/web</strong> developent</em>
                     </p>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum
-                        placeat esse necessitatibus, veniam molestiae modi sapiente
-                        accusantium non doloremque molestias eos omnis quae illum quaerat
-                        distinctio autem sequi voluptatem error.
+                        Currently a welder/fabricator self learning web development
+                        and programming.
                     </p>
                 </td>
             </tr>
@@ -34,7 +54,6 @@
 
     <h4>Links</h4>
     <a href="ContactMe.html">Contact Me</a>
-    <a href="Stuff.html">Stuff</a>
 
     <hr />
     <!-- This is a comment-->
